<resources>
    <string name="app_name">My Application</string>
    <string name="today">Today</string>
    <string name="sunday_25_february_10_00pm">Sunday, 25 February | 10:00PM</string>
    <string name="_0">0%</string>
    <string name="london_uk">London - UK</string>
    <string name="_21_c">21°C</string>
    <string name="partly_cloudy">Partly Cloudy</string>
    <string name="h_29_l_15">H:29° L:15°</string>
    <string name="_13mph">13MPH</string>
    <string name="_3_day_forecast">3-day forecast</string>
    <string name="now">Now</string>
    <string name="_19">19°</string>
    <string name="visible">visible</string>
    <string name="_12">12</string>
    <string name="press_to_get_data">Press to get data</string>
    <string name="get_started">Get Started</string>
    <string name="london">london</string>
    <string name="weather">Weather</string>
    <string name="welcome_to_the_weather_app">Welcome to the Weather App</string>
    <string name="todo">TODO</string>
    <string name="my_application">My Application</string>
    <string name="united_kingdom">United Kingdom</string>
    <string name="sunny">Sunny</string>
    <string name="_20">20°</string>
    <string name="h_29_l_16">H:29° L:16°</string>
    <string name="background">Background</string>
    <string name="visibility">Visibility</string>
    <string name="wind_direction">Wind Direction</string>
    <string name="cloudy">cloudy</string>
    <string name="southwest">southwest</string>
    <string name="other_cities">Other Cities</string>
    <string name="_29_15">29°/15°</string>
    <string name="_3_days">3 Days</string>
    <string name="partly_sunny">Partly Cloudy</string>
    <string name="_22">22%</string>
    <string name="precipitation">Precipitation</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="_1">0%</string>
    <string name="humidity">Humidity</string>
    <string name="today1">Today</string>
    <string name="_13_mph">13 MPH</string>
    <string name="sunset_is_at_6_30_pm">Sunset is at: 6:30 pm</string>
</resources>