<?xml version="1.0" encoding="utf-8"?>
<!-- MPD XML Starter code - main diet 2023-2024 -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/containerLayout">


    <ImageView
        android:id="@+id/imageViewBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/back_1"
        tools:ignore="ContentDescription" />


    <ImageView
        android:id="@+id/imageViewCentre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/back_4"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="14dp"
        android:layout_marginTop="146dp"
        android:text="@string/welcome_to_the_weather_app"
        android:textColor="@color/GoldenYellow"
        android:textSize="30sp" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="202dp"
        android:layout_height="196dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="108dp"
        android:layout_marginTop="234dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/weather_app" />


    <Button
        android:id="@+id/startButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="243dp"
        android:text="@string/get_started"
        android:onClick="onClick" />
</RelativeLayout>
