<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="90dp"
    android:layout_margin="8dp"
    app:cardCornerRadius="20dp"
    app:cardElevation="3dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background2"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:textAlignment="center"
            android:layout_marginTop="15dp">

            <ImageView
                android:id="@+id/image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/day_partial_cloud"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginTop="15dp">

            <TextView
                android:id="@+id/cityName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_20"
                android:textColor="@color/Black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/visibilityTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/h_29_l_16"
                android:textColor="@color/Black"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:textAlignment="center"
            android:layout_marginTop="15dp">

            <TextView
                android:id="@+id/temperatureTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/united_kingdom"
                android:textColor="@color/Black"
                android:textSize="15sp" />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>
