<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageViewTop"
        android:layout_width="match_parent"
        android:layout_height="370dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/back_3"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/imageViewBottom"
        android:layout_width="match_parent"
        android:layout_height="398dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="2dp"
        android:scaleType="centerCrop"
        android:src="@drawable/back_1"
        tools:ignore="ContentDescription" />


    <ImageView
        android:id="@+id/imageViewCentre"
        android:layout_width="match_parent"
        android:layout_height="586dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/back_4"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/back"
        android:layout_marginTop="40dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="132dp"
            android:layout_marginTop="61dp"
            android:text="@string/_3_days"
            android:textColor="@color/White"
            android:textSize="45sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background2"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageid"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_margin="16dp"
                    android:background="@drawable/day_partial_cloud" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/titleTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/today1"
                        android:textColor="@color/White"
                        android:layout_margin="10dp"
                        android:textSize="25sp"
                        android:textAlignment="center"/>


                    <TextView
                        android:id="@+id/temperatureTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/_29_15"
                        android:textAlignment="center"
                        android:textColor="@color/White"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/temperatureTextView1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/_29_15"
                        android:textAlignment="center"
                        android:textColor="@color/White"
                        android:textSize="15sp" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:layout_weight="0.333"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_weight="1"
                        android:src="@drawable/uv" />

                    <TextView
                        android:id="@+id/uvRiskTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="6"
                        android:textAlignment="center"
                        android:textColor="@color/White"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/textView12"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="UV Risk"
                        android:textAlignment="center"
                        android:textColor="@color/White"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:layout_weight="0.333"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:src="@drawable/wind_speed" />

                    <TextView
                        android:id="@+id/windSpeedTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/_13_mph"
                        android:textAlignment="center"
                        android:textColor="@color/White"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/textView14"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/wind_speed"
                        android:textAlignment="center"
                        android:textColor="@color/White"
                        android:textSize="17sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:layout_weight="0.333"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:src="@drawable/precipitation" />

                    <TextView
                        android:id="@+id/humidityTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/_1"
                        android:textAlignment="center"
                        android:textColor="@color/White"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/textView16"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/humidity"
                        android:textAlignment="center"
                        android:textColor="@color/White"
                        android:textSize="17sp" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/background2"
            android:layout_margin="20dp">

            <TextView
                android:id="@+id/descriptionTextView"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/sunset_is_at_6_30_pm"
                android:textColor="@color/White"
                android:textSize="20sp"
                android:textAlignment="center"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:background="@drawable/background2">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp"
            android:layout_weight="0.5">

            <TextView
                android:id="@+id/day2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Tuesday"
                android:textColor="@color/White"
                android:textSize="20sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="10dp"
                android:layout_weight="0.25">

                <TextView
                    android:id="@+id/minimumTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="MinTemp"
                    android:textColor="@color/White"
                    android:textSize="15sp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="10dp"
                android:layout_weight="0.25">

                <ImageView
                    android:id="@+id/tempImageView"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/temp"
                    android:layout_marginTop="10dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="10dp"
                android:layout_weight="0.25">

                <TextView
                    android:id="@+id/maximumTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="MaxTemp"
                    android:textColor="@color/White"
                    android:textSize="15sp"/>
            </LinearLayout>
            </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="@drawable/background2"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp"
            android:layout_weight="0.5">

            <TextView
                android:id="@+id/day3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Wednesday"
                android:textColor="@color/White"
                android:textSize="20sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp"
            android:layout_weight="0.25">

            <TextView
                android:id="@+id/minTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="MinTemp"
                android:textColor="@color/White"
                android:textSize="15sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp"
            android:layout_weight="0.25">

            <ImageView
                android:id="@+id/tempImageView2"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:background="@drawable/temp"
                android:layout_marginTop="10dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp"
            android:layout_weight="0.25">

            <TextView
                android:id="@+id/maxTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="MaxTemp"
                android:textColor="@color/White"
                android:textSize="15sp"/>
        </LinearLayout>
    </LinearLayout>
    </LinearLayout>


</RelativeLayout>